# clean_scGPT

./: .gitignore  model.py  perturbation_data.py  pull_latest_nano.sh  pyproject.toml
src/: compare.ipynb  embed_cells.py  train_perturbation.py  tutorial_prp.py
