[project]
name = "clean_scGPT"
version = "0.1.0"
description = "a clean scGPT env"
readme = "README.md"
# FORCE uv to use Python 3.10 exactly
requires-python = ">=3.10,<3.11"
dependencies = [
    "ipython>=8.0.0,<9.0.0",
    "mygene>=3.2.2",
    "numpy<2.0",
    "scanpy>=1.10.0",
    # Clamp Torch and Torchtext to their last known stable, paired versions
    "torch>=2.2.0,<2.3.0",
    "torchtext>=0.17.0,<0.18.0",
    "pyarrow<19.0.0", # <-- Add this safety constraint
    "scgpt",
]
